# turbo-dom

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  EXPERIMENTS.md  GEOMETRY-REALISM.md  LICENSE  README.md  RUST_PORT_PERF_HISTORY.md  RUST_PORT_PLAN.md  SPIKE_NOTES.md  build.rs  fast-dom-spec.md  gr0gdom-spec.md  index.d.ts  index.js  mise.toml  package-lock.json  package.json  turbo-dom-spec.md
.githooks/: pre-commit
.github/workflows/: ci.yml
bench/: compare-all.mjs  construct.mjs  dom-compare.mjs  parse.mjs  perf-probe.mjs  query-cold.mjs  query.mjs  spike.mjs  suite.mjs  wasm.mjs
crates/turbo-dom/: Cargo.toml
crates/turbo-dom-rtdom/: Cargo.toml  README.md
crates/turbo-dom-rtdom/examples/: crawl.rs
crates/turbo-dom-rtdom/src/: lib.rs
crates/turbo-dom-rtdom/src/rtdom/: bench.rs  cascade.rs  color.rs  cssom.rs  events.rs  location.rs  mod.rs  node_ref.rs  stubs.rs
crates/turbo-dom/examples/: churn_profile.rs
crates/turbo-dom/src/: core.rs
crates/turbo-dom/src/rtdom/: bench.rs  canvas.rs  cascade.rs  color.rs  conformance.rs  cssom.rs  custom_elements.rs  dump.rs  events.rs  file.rs  gauntlet.rs  location.rs  mod.rs  mutations.rs  node_ref.rs  query.rs  sel.rs  serialize.rs  stubs.rs  svg.rs  tree.rs
harness/: adapters.mjs  conformance.mjs  dat.mjs  delta.mjs  serialize.mjs
src/: core.rs  lib.rs  spike.rs
src/environment/: install.mjs  jest.cjs  vitest.mjs
src/rtdom/: canvas.rs  cascade.rs  color.rs  conformance.rs  cssom.rs  custom_elements.rs  dump.rs  events.rs  file.rs  gauntlet.rs  mod.rs  mutations.rs  node_ref.rs  query.rs  serialize.rs  stubs.rs  svg.rs  tree.rs
src/runtime/: buffer.mjs  cascade.mjs  collections.mjs  color.mjs  cssom.mjs  dom.mjs  events.mjs  html-serialize.mjs  index.mjs  parser.mjs  selectors.mjs  stubs.mjs  window.mjs
test/: component-gauntlet.test.mjs  conformance.test.mjs  coverage-fill.test.mjs  cssom.test.mjs  dat.test.mjs  delta.test.mjs  differential.test.mjs  environment.test.mjs  gauntlet.test.mjs  liveness.test.mjs  parser.test.mjs  regression.test.mjs  runtime.test.mjs  selectors-backtrack.test.mjs  selectors-lists.test.mjs  selectors-parser.test.mjs  serialize.test.mjs  shadow-features.test.mjs  shadow.test.mjs  smoke.mjs  surface-sweep.test.mjs  surface.test.mjs  userevent.test.mjs
test-jest/: dom.test.js  jest.config.cjs
test-vitest/: bucket37.test.jsx  buckets2.test.jsx  forms.test.jsx  inputs.test.jsx  reentrancy.test.jsx  vitest.config.mjs
