[package]
name = "turbo-dom"
version = "0.3.5"
edition = "2021"
description = "Pure-Rust DOM runtime — lazy copy-on-write tree over an html5ever SoA, native Rust API, zero JS boundary. For in-process Rust consumers (crawlers, extractors, SSR)."
license = "MIT"
repository = "https://github.com/miaskiewicz/turbo-dom"
readme = "README.md"
keywords = ["dom", "html", "parser", "html5ever", "scraping"]
categories = ["parser-implementations", "web-programming"]

[lib]
crate-type = ["rlib"]

[dependencies]
# Spec-compliant WHATWG parser (same core as turbo-dom). The runtime builds its
# COW tree directly over the SoA this produces.
html5ever = "0.39"
markup5ever_rcdom = "0.39"
# Fast non-crypto hashing for SoA string interning (parse hot path).
rustc-hash = "2"

# --- SPIKE: Servo's selector engine, gated behind `selectors-engine` ---
# OFF by default so the default build keeps the advertised 3-dep / vendorable
# profile. Enable to route Tree::matches/query_selector* through `selectors`.
selectors = { version = "0.38", optional = true }
cssparser = { version = "0.37", optional = true }
# `selectors`' string associated types require `PrecomputedHash`; we implement it
# on our own `CssString` wrapper, so we need to name the trait directly.
precomputed-hash = { version = "0.1", optional = true }

[features]
# SPIKE flag. When ON, the hand-rolled query.rs engine is compiled out and the
# public Tree selector methods delegate to src/rtdom/sel.rs (Servo `selectors`).
selectors-engine = ["dep:selectors", "dep:cssparser", "dep:precomputed-hash"]
