[package]
name = "turbo-dom"
version = "0.4.0"
edition = "2021"
description = "Pure-Rust DOM runtime — lazy copy-on-write tree over an html5ever SoA, native Rust API, zero JS boundary. For in-process Rust consumers (crawlers, extractors, SSR)."
license = "MIT"
repository = "https://github.com/miaskiewicz/turbo-dom"
readme = "README.md"
keywords = ["dom", "html", "parser", "html5ever", "scraping"]
categories = ["parser-implementations", "web-programming"]

[lib]
crate-type = ["rlib"]

[dependencies]
# Spec-compliant WHATWG parser (same core as turbo-dom). The runtime builds its
# COW tree directly over the SoA this produces.
html5ever = "0.39"
markup5ever_rcdom = "0.39"
# Fast non-crypto hashing for SoA string interning (parse hot path).
rustc-hash = "2"
# Immutable small-string-optimized string (inline for short strings, no heap).
# Backs the mutation-owned overlay fields (created element/text/comment data, attr
# name/value pairs, text overrides), which are only ever assigned/replaced, never
# mutated in place. Lighter than compact_str (no numeric-formatting deps).
smol_str = "0.3"
# Small-vector optimization for the per-node overlay child/attr lists. Inlines
# small lists (≤8 child handles / ≤2 attr pairs) so mutation churn doesn't heap-
# alloc a Vec per mutated node; the rare wide node spills to the heap. API-compatible
# with Vec (push/remove/iter/Deref to slice). Already in the tree transitively (via
# parking_lot), so it adds no new crate.
smallvec = "1"

# Adopt clippy's opt-in `pedantic` group as a warn-level gate (CI's `-D warnings`
# escalates it to an error). The lints allowed below don't fit a DOM / layout / parse
# engine — "fixing" them would mangle correct, intentional code, so each is a
# documented opt-out rather than a silent suppression.
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# We bridge f64 layout math and integer indices/lengths with bounded, intentional casts.
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
# Exact float comparisons here test canonical/sentinel values (e.g. `0.0`), not approximations.
float_cmp = "allow"
# Single-char names are idiomatic for the tokenizer / loop indices (`i`, `j`, `n`, `c`).
many_single_char_names = "allow"
# Test-time DOM oracle: it deliberately doesn't document every panic/error path.
missing_panics_doc = "allow"
missing_errors_doc = "allow"
# A few config-ish structs legitimately carry several independent bool flags.
struct_excessive_bools = "allow"
# One large dispatch fn reads better intact than artificially split.
too_many_lines = "allow"
# We intentionally pin the concrete FxHashMap hasher rather than generalize over hashers.
implicit_hasher = "allow"
